[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
